smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/list-invalid-member.smithy
// Parse error at line 5, column 3 near `foo`: Invalid member `foo` found in list shape `com.foo#MyList`. Expected one of the following members: [`member`]
namespace com.foo

list MyList {
  foo: smithy.api#String,
}
